Updates Froala to include draggable, tables and images.

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,6 +1,9 @@
 @import "froala_editor.min.css";
 @import "froala_style.min.css";
 @import "font-awesome-sprockets";
+@import "plugins/image.min.css";
+@import "plugins/draggable.min.css";
+@import "plugins/table.min.css";
 @import "bootstrap";
 @import "font-awesome";
 @import "wfmi-style";
