--- a/app/views/illnesses/_form.html.erb
+++ b/app/views/illnesses/_form.html.erb
@@ -1,7 +1,7 @@
 <script> $(function() { $('#description, #etio_and_pato').froalaEditor( {
-    toolbarButtons: ['undo', 'redo', '|' , 'bold', 'italic', 'underline', 'subscript', 'superscript'],
+    toolbarButtons: ['undo', 'redo', '|' , 'bold', 'italic', 'underline', 'subscript', 'superscript', 'align', '|', 'insertImage', 'insertTable'],
     height: 317,
-    placeholderText: 'Skriv noget'
+    placeholderText: 'Skriv noget...'
     }) });
 </script>
 
