--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,9 +1,9 @@
-@import "froala_editor.min.css";
-@import "froala_style.min.css";
+@import "froala_editor.min";
+@import "froala_style.min";
 @import "font-awesome-sprockets";
-@import "plugins/image.min.css";
-@import "plugins/draggable.min.css";
-@import "plugins/table.min.css";
+@import "plugins/image.min";
+@import "plugins/draggable.min";
+@import "plugins/table.min";
 @import "bootstrap";
 @import "font-awesome";
 @import "wfmi-style";
