--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 <ol class="breadcrumb">
   <%= render_breadcrumbs :separator => "<span class='lead'> » </span>".html_safe %>
 </ol>
-<div class="container-fluid">
+<div class="container">
   <%= yield %>
 </div>
 
