Minor ui changes

--- a/app/views/illnesses/index.html.erb
+++ b/app/views/illnesses/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <div class="col-md-12">
 <table class="table table-hover">
   <thead class="thead-default">
@@ -19,4 +20,5 @@
   <% end %>
   </tbody>
 </table>
+</div>
 </div>
